odevzdani/tests/invalid_sem/def/def05.java
class Main {
    static int run() {
        int b;
    }
}
